--- a/scss/header.scss
+++ b/scss/header.scss
@@ -162,13 +162,13 @@ $search-width: 150px;
             font-size: 70px;
             font-weight: 700;
             line-height: 1.15;
-            letter-spacing: 3px;
-            word-spacing: 7px;
+            letter-spacing: 3.1px;
+            word-spacing: 6px;
             color: $text-white;
         }
 
         hr {
-            width: 100px;
+            width: 96px;
             border: 2px solid $secondary-color;
             margin-top: 44px;
             margin-left: 0;
@@ -178,7 +178,7 @@ $search-width: 150px;
         p {
             font-size: 20px;
             line-height: 1.5;
-            letter-spacing: 0.55px;
+            letter-spacing: 0.51px;
             color: $text-yellow;
         }
 
@@ -189,6 +189,7 @@ $search-width: 150px;
             font-size: 20px;
             font-weight: 700;
             word-spacing: 10px;
+            letter-spacing: 0.5px;
             text-transform: uppercase;
             color: $text-yellow;
             margin-top: 38px;
